--- a/05_Model_Building.Rmd
+++ b/05_Model_Building.Rmd
@@ -30,7 +30,7 @@ suppressPackageStartupMessages({
 options(tibble.width = Inf)   # Print all the columns of a tibble (data.frame)
 ```
 
-Dr. Sonderegger's Video Companion: [Video Lecture](https://youtu.be/9RCo2ByHTgY) that accompanies this chapter.
+Dr. Sonderegger's Video Companion: [Video Lecture](https://youtu.be/9RCo2ByHTgY).
 
 ## Introduction to Simple Statistical Models
 
@@ -287,30 +287,51 @@ ggplot(iris, aes(x=Sepal.Length, y=Petal.Length, color=Species)) +
 
 ## Exercises  {#Exercises_ModelBuilding}
 
-1.  Using the `trees` data frame that comes pre-installed in R, we will fit the regression model that uses the tree `Height` as a predictor to explain the `Volume` of wood harvested from the tree. We will then plot our model with some of the information of the regression model on the graph.
-    a)  Graph the data
-    b)  Fit a `lm` model using the command `model <- lm(Volume ~ Height, data=trees)`.
-    c)  Print out the table of coefficients with estimate names, estimated value, standard error, and upper and lower 95% confidence intervals.
-    d)  Add the model fitted values to the `trees` data frame along with the confidence interval.
-    e)  Graph the data including now the fitted regression line and confidence interval ribbon.
-    f)  Add the R-squared value as an annotation to the graph.
+### Exercise 1 {-}
+
+Using the `trees` data frame that comes pre-installed in R, we will fit the regression model that uses the tree `Height` as a predictor to explain the `Volume` of wood harvested from the tree. We will then plot our model with some of the information of the regression model on the graph.
+
+**a)**  Graph the data
+
+**b)**  Fit a `lm` model using the command `model <- lm(Volume ~ Height, data=trees)`.
+
+**c)** Print out the table of coefficients with estimate names, estimated value, standard error, and upper and lower $95\%$ confidence intervals.
+
+**d)** Add the model fitted values to the `trees` data frame along with the confidence interval.
+
+**e)** Graph the data including now the fitted regression line and confidence interval ribbon.
+
+**f)** Add the R-squared value as an annotation to the graph.
   
-2.  The data set `phbirths` from the `faraway` package contains information on birth weight, gestational length, and smoking status of mother. We'll fit a quadratic model to predict infant birth weight using the gestational time.
-    a)  Create two scatter plots of gestational length and birth weight, one for each smoking status.
-    b)  Remove all the observations that are premature (less than 36 weeks). For the remainder of the problem, only use full-term births (greater than or equal to 36 weeks).
-    c)  Fit the quadratic model
-        ```{r, eval=FALSE}
-        model <- lm(grams ~ poly(gestate,2) * smoke, data=phbirths)
-        ```
-    d)  Add the model fitted values to the `phbirths` data frame along with the regression model confidence intervals.
-    e)  Improve your graph from part (a) by adding layers for the model fits and confidence interval ribbon for the model fits.
-    f)  Create a column for the residuals in the `phbirths` data set using any of the following:
-        ```{r, eval=FALSE}
-        phbirths$residuals = resid(model)
-        phbirths <- phbirths %>% mutate( residuals = resid(model) )
-        phbirths <- broom::augment(model, phbirths)
-        ```
-    g)  Create a histogram of the residuals.
+### Exercise 2 {-}
+
+The data set `phbirths` from the `faraway` package contains information on birth weight, gestational length, and smoking status of mother. We'll fit a quadratic model to predict infant birth weight using the gestational time.
+
+**a)** Create two faceted scatter plots of gestational length and birth weight, one for each smoking status.
+
+**b)** Remove all the observations that are premature (less than 36 weeks). 
+
+**For the remainder of the problem, only use full-term births (greater than or equal to 36 weeks).**
+
+**c)**  Fit the quadratic model
+
+```{r, eval=FALSE}
+model <- lm(grams ~ poly(gestate,2) * smoke, data=phbirths)
+```
+
+**d)**  Add the model fitted values to the `phbirths` data frame along with the regression model confidence intervals.
+
+**e)** Improve your graph from part (a) by adding layers for the model fits and confidence interval ribbon for the model fits.
+
+**f)** Create a column for the residuals in the `phbirths` data set using any of the following (you only need one):
+
+```{r, eval=FALSE}
+phbirths$residuals = resid(model)
+phbirths <- phbirths %>% mutate( residuals = resid(model) )
+phbirths <- broom::augment(model, phbirths)
+```
+
+**g)** Create a histogram of the residuals.
 
 
 
